# personalized-outreach-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/prompts/: email.j2  linkedin.j2
app/routers/: outreach.py
app/schemas/: outreach.py
app/services/: cost.py  generator.py
data/: sample_researchers.json
