[project]
name = "personalized-outreach-agent"
version = "0.1.0"
description = "AI-powered agent that generates personalized outreach messages for researchers"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.30.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "slowapi>=0.1.9",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"